--- a/index.html
+++ b/index.html
@@ -222,8 +222,16 @@ document.getElementById("runBtn").addEventListener("click", function () {
 
 });
 </script>
-
+<!-- Job Status Modal -->
+<div id="jobModal" class="modal">
+  <div class="modal-content">
+    <h3 id="modalTitle">GST Automation</h3>
+    <p id="modalMessage">Starting...</p>
+    <button onclick="closeModal()">Close</button>
+  </div>
+</div>
 
 </body>
 </html>
+
 
