--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
 <script>
 /* ================= CONFIG ================= */
-const API_BASE = "https://192.168.1.85:5000";
+const API_BASE = "http://192.168.1.85:5000";
 console.log("API BASE =", API_BASE);
 
 /* ================= INIT ================= */
@@ -250,5 +250,6 @@ runBtn.onclick = () => {
 
 </body>
 </html>
+
 
 
